// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceList should render 1`] = `
<div>
  <div
    class="settings-root"
  >
    <nav
      class="bg-white mb-4 tbar component-tbar"
    >
      <ul
        class="mx-4 tbar-nav"
      >
        <li
          class="tbar-item"
        >
          <div
            class="component-action"
          >
            <a
              aria-label="Back"
              class="text-secondary"
              href="/workspace/23"
            >
              <svg
                class="lexicon-icon lexicon-icon-angle-left mb-1"
                role="presentation"
              >
                <use
                  href="#angle-left"
                />
              </svg>
            </a>
          </div>
        </li>
        <li
          class="pl-0 tbar-item"
        >
          <div
            class="tbar-section"
          >
            <span
              class="text-dark"
            >
              <span
                class="text-5 font-weight-bold"
              >
                Settings
              </span>
            </span>
          </div>
        </li>
      </ul>
    </nav>
    <div
      class="content-wrapper"
    >
      <nav
        class="section-side settings-side-bar"
      >
        <div>
          <h5
            class="section-title"
          >
            Workspace Data
          </h5>
          <ul
            class="nav"
          >
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/apis/tokens"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_api icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_api"
                    />
                  </svg>
                </span>
                APIs
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/definitions"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-definitions icon-root"
                    role="presentation"
                  >
                    <use
                      href="#definitions"
                    />
                  </svg>
                </span>
                Definitions
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/data-privacy"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-data_privacy_lock icon-root"
                    role="presentation"
                  >
                    <use
                      href="#data_privacy_lock"
                    />
                  </svg>
                </span>
                Data Control & Privacy
              </a>
            </li>
            <li
              class="item active"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/data-source"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-faro_data_source icon-root"
                    role="presentation"
                  >
                    <use
                      href="#faro_data_source"
                    />
                  </svg>
                </span>
                Data Sources
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/recommendations"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_star icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_star"
                    />
                  </svg>
                </span>
                Recommendations
              </a>
            </li>
          </ul>
        </div>
        <div>
          <h5
            class="section-title"
          >
            Workspace Settings
          </h5>
          <ul
            class="nav"
          >
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/users"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-user_management icon-root"
                    role="presentation"
                  >
                    <use
                      href="#user_management"
                    />
                  </svg>
                </span>
                User Management
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/properties"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_page icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_page"
                    />
                  </svg>
                </span>
                Properties
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/usage"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-usage icon-root"
                    role="presentation"
                  >
                    <use
                      href="#usage"
                    />
                  </svg>
                </span>
                Subscription & Usage
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/workspace"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-cog icon-root"
                    role="presentation"
                  >
                    <use
                      href="#cog"
                    />
                  </svg>
                </span>
                Workspace
              </a>
            </li>
          </ul>
        </div>
      </nav>
      <div
        class="content section-main"
      >
        <div
          class="settings-base-page-root"
        >
          <div
            class="embedded-alert-list-root notification-alert-list-root"
          />
          <div
            class="maintenance-alert-root"
          />
          <div
            class="content-header"
          >
            <div
              class="header-text"
            >
              <div
                class="d-flex"
              >
                <h3
                  class="title-text text-truncate"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    Data Sources
                  </span>
                </h3>
              </div>
              <div
                class="description"
              >
                Manage and connect data sources to bring in data from various sources into Liferay Analytics Cloud.
              </div>
            </div>
            <div
              class="page-actions-container"
            />
          </div>
          <div>
            <div
              class="embedded-alert-list-root"
            />
            <div
              class="card card-root"
            >
              <div
                class="toolbar-root"
              >
                <nav
                  class="navbar navbar-root my-2 management-bar management-bar-light navbar-expand"
                >
                  <div
                    class="container-fluid"
                  >
                    <ul
                      class="nav-root front-nav navbar-nav"
                      role="tablist"
                    >
                      <li
                        class="nav-item"
                        role="presentation"
                      >
                        <div
                          class="dropdown dropdown-root"
                        >
                          <button
                            aria-controls="clay-dropdown-menu-1"
                            aria-expanded="false"
                            aria-haspopup="true"
                            class="dropdown-toggle btn btn-outline-borderless btn-sm btn-outline-secondary"
                            data-testid="order-button"
                            type="button"
                          >
                            <span
                              class="caret-root"
                            >
                              <svg
                                class="lexicon-icon lexicon-icon-order-list-down"
                                role="presentation"
                              >
                                <use
                                  href="#order-list-down"
                                />
                              </svg>
                            </span>
                            <span
                              class="mx-2"
                            >
                              Order
                            </span>
                            <span
                              class="caret-root"
                            >
                              <svg
                                class="lexicon-icon lexicon-icon-caret-bottom"
                                role="presentation"
                              >
                                <use
                                  href="#caret-bottom"
                                />
                              </svg>
                            </span>
                          </button>
                        </div>
                      </li>
                    </ul>
                    <div
                      class="navbar-form navbar-form-autofit mx-2"
                    >
                      <div
                        class="input-group search"
                      >
                        <div
                          class="input-group-item"
                        >
                          <input
                            class="input-root form-control input-group-inset input-group-inset-after"
                            placeholder="Search"
                            type="text"
                            value=""
                          />
                          <div
                            class="input-group-inset-item input-group-inset-item-after"
                          >
                            <button
                              aria-label="Search"
                              class="button-root btn btn-unstyled"
                              type="button"
                            >
                              <svg
                                class="lexicon-icon lexicon-icon-search icon-root"
                                role="presentation"
                              >
                                <use
                                  href="#search"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="dropdown"
                    >
                      <button
                        aria-controls="clay-dropdown-menu-2"
                        aria-expanded="false"
                        aria-haspopup="true"
                        class="dropdown-toggle btn btn-sm btn-primary"
                        type="button"
                      >
                        Add Data Source
                        <svg
                          class="lexicon-icon lexicon-icon-caret-bottom ml-2"
                          role="presentation"
                        >
                          <use
                            href="#caret-bottom"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </nav>
              </div>
              <div
                class="flex-grow-1 mx-4 table-root"
              >
                <div
                  class="table-responsive"
                >
                  <table
                    class="table table-autofit table-striped table-list table-nowrap table-head-bordered table-hover"
                  >
                    <thead>
                      <tr>
                        <th
                          class="table-head-title"
                        >
                          <a
                            class="button-root w-100 btn btn-unstyled"
                            href="/?field=name&page=1&sortOrder=DESC"
                          >
                            <div
                              class="align-items-center d-flex justify-content-between"
                            >
                              <div
                                class="text-truncate"
                              >
                                Data Source Name
                              </div>
                              <button
                                aria-label="Ascending"
                                class="component-action ml-2 btn btn-sm btn-primary"
                                type="button"
                              >
                                <svg
                                  class="lexicon-icon lexicon-icon-order_arrow_ascending icon-root"
                                  role="presentation"
                                >
                                  <use
                                    href="#order_arrow_ascending"
                                  />
                                </svg>
                              </button>
                            </div>
                          </a>
                        </th>
                        <th
                          class="table-head-title"
                        >
                          <a
                            class="button-root w-100 btn btn-unstyled"
                            href="/?field=providerType&page=1&sortOrder=ASC"
                          >
                            <div
                              class="align-items-center d-flex justify-content-between"
                            >
                              <div
                                class="text-truncate"
                              >
                                Type
                              </div>
                              <button
                                aria-label="Descending"
                                class="component-action ml-2 btn btn-sm btn-primary"
                                type="button"
                              >
                                <span
                                  class="opacity-25"
                                >
                                  <svg
                                    class="lexicon-icon lexicon-icon-order-arrow icon-root"
                                    role="presentation"
                                  >
                                    <use
                                      href="#order-arrow"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </div>
                          </a>
                        </th>
                        <th
                          class="table-head-title"
                        >
                          Status
                        </th>
                        <th
                          class="table-head-title"
                        >
                          Individuals Data
                        </th>
                        <th
                          class="table-head-title"
                        >
                          Analytics Data
                        </th>
                        <th
                          class="table-head-title"
                        >
                          <a
                            class="button-root w-100 btn btn-unstyled"
                            href="/?field=createDate&page=1&sortOrder=DESC"
                          >
                            <div
                              class="align-items-center d-flex justify-content-between"
                            >
                              <div
                                class="text-truncate"
                              >
                                Date Added
                              </div>
                              <button
                                aria-label="Descending"
                                class="component-action ml-2 btn btn-sm btn-primary"
                                type="button"
                              >
                                <span
                                  class="opacity-25"
                                >
                                  <svg
                                    class="lexicon-icon lexicon-icon-order-arrow icon-root"
                                    role="presentation"
                                  >
                                    <use
                                      href="#order-arrow"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </div>
                          </a>
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr
                        class=""
                      >
                        <td
                          class="table-cell-expand"
                        >
                          <div
                            class="table-title"
                          >
                            <a
                              class="text-truncate"
                              href="/workspace/23/settings/data-source/0"
                            >
                              CSV0
                            </a>
                          </div>
                        </td>
                        <td>
                          .CSV
                        </td>
                        <td>
                          <div
                            class="label label-root label-success label-uppercase"
                          >
                            <span
                              class="label-item"
                            >
                              Active
                            </span>
                          </div>
                        </td>
                        <td
                          class="text-center"
                        >
                          <svg
                            class="lexicon-icon lexicon-icon-check icon-root"
                            role="presentation"
                          >
                            <use
                              href="#check"
                            />
                          </svg>
                        </td>
                        <td
                          class="text-center"
                        />
                        <td>
                          Jul 8, 2018
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
              <nav
                class="navbar navbar-root pagination-bar-root"
              >
                <div
                  class="container-fluid"
                >
                  <div
                    class="dropdown dropdown-root pagination-items-per-page"
                  >
                    <button
                      aria-controls="clay-dropdown-menu-3"
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="dropdown-toggle button-root btn btn-sm btn-secondary"
                      type="button"
                    >
                      2 Items
                      <svg
                        class="lexicon-icon lexicon-icon-caret-bottom ml-2"
                        role="presentation"
                      >
                        <use
                          href="#caret-bottom"
                        />
                      </svg>
                    </button>
                  </div>
                  <div
                    class="pagination-results"
                  >
                    Showing 1 to 1 of 1 entry.
                  </div>
                  <ul
                    class="pagination pagination-root"
                  >
                    <li
                      class="page-item disabled"
                    >
                      <a
                        class="button-root btn btn-unstyled page-link"
                        disabled=""
                        href="/?page=0"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-angle-left-small icon-root"
                          role="presentation"
                        >
                          <use
                            href="#angle-left-small"
                          />
                        </svg>
                      </a>
                    </li>
                    <li
                      class="page-item active"
                    >
                      <a
                        class="button-root btn btn-unstyled page-link"
                        href="/?page=1"
                      >
                        1
                      </a>
                    </li>
                    <li
                      class="page-item disabled"
                    >
                      <a
                        class="button-root btn btn-unstyled page-link"
                        disabled=""
                        href="/?page=2"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-angle-right-small icon-root"
                          role="presentation"
                        >
                          <use
                            href="#angle-right-small"
                          />
                        </svg>
                      </a>
                    </li>
                  </ul>
                </div>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataSourceList should render toast for multiple data sources with invalid credentials 1`] = `
<div
  class="embedded-alert-list-root"
>
  <div
    class="alert alert-warning"
    role="alert"
  >
    <span
      class="alert-indicator"
    >
      <svg
        class="lexicon-icon lexicon-icon-warning-full icon-root"
        role="presentation"
      >
        <use
          href="#warning-full"
        />
      </svg>
    </span>
    <strong
      class="lead"
    >
      Warning:
    </strong>
    Some of your authorization tokens have expired. Please reauthorize the account credentials on these data sources to prevent syncing interruptions.
  </div>
</div>
`;

exports[`DataSourceList should render toast for multiple data sources with invalid credentials for a member's view 1`] = `
<div
  class="embedded-alert-list-root"
>
  <div
    class="alert alert-warning"
    role="alert"
  >
    <span
      class="alert-indicator"
    >
      <svg
        class="lexicon-icon lexicon-icon-warning-full icon-root"
        role="presentation"
      >
        <use
          href="#warning-full"
        />
      </svg>
    </span>
    <strong
      class="lead"
    >
      Warning:
    </strong>
    Some of your authorization tokens have expired. Please contact your oAuth Administrator to reauthorize.
  </div>
</div>
`;

exports[`DataSourceList should render toast for one data source with invalid credentials 1`] = `
<div
  class="embedded-alert-list-root"
>
  <div
    class="alert alert-warning"
    role="alert"
  >
    <span
      class="alert-indicator"
    >
      <svg
        class="lexicon-icon lexicon-icon-warning-full icon-root"
        role="presentation"
      >
        <use
          href="#warning-full"
        />
      </svg>
    </span>
    <strong
      class="lead"
    >
      Warning:
    </strong>
    Your authorization token for 
    <b>
      Liferay1
    </b>
     has expired. Please 
    <a
      href="/workspace/23/settings/data-source/1"
    >
      reauthorize
    </a>
     your account credentials.
  </div>
</div>
`;

exports[`DataSourceList should render toast for one data source with invalid credentials for a member's view 1`] = `
<div
  class="embedded-alert-list-root"
>
  <div
    class="alert alert-warning"
    role="alert"
  >
    <span
      class="alert-indicator"
    >
      <svg
        class="lexicon-icon lexicon-icon-warning-full icon-root"
        role="presentation"
      >
        <use
          href="#warning-full"
        />
      </svg>
    </span>
    <strong
      class="lead"
    >
      Warning:
    </strong>
    Your authorization token for 
    <b>
      Liferay1
    </b>
     has expired. Please contact your OAuth Administrator, 
    test@liferay.com
    , to reauthorize.
  </div>
</div>
`;

exports[`DataSourceList should render with a member-specific message to connect datasources if there are none 1`] = `
<div
  class="no-results-root flex-grow-1 no-results-primary"
>
  <div
    class="no-results-content"
  >
    <div
      class="no-results-icon"
    >
      <svg
        class="lexicon-icon lexicon-icon-ac_satellite icon-root icon-size-xxxl"
        role="presentation"
      >
        <use
          href="#ac_satellite"
        />
      </svg>
    </div>
    <div
      class="h4 no-results-title"
    >
      No Data Sources Connected
    </div>
    <div
      class="no-results-description"
    >
      Please contact your workspace administrator to add data sources.
    </div>
  </div>
</div>
`;

exports[`DataSourceList should render with a message to connect datasources if there are none 1`] = `
<div
  class="no-results-root flex-grow-1 no-results-primary"
>
  <div
    class="no-results-content"
  >
    <div
      class="no-results-icon"
    >
      <svg
        class="lexicon-icon lexicon-icon-ac_satellite icon-root icon-size-xxxl"
        role="presentation"
      >
        <use
          href="#ac_satellite"
        />
      </svg>
    </div>
    <div
      class="h4 no-results-title"
    >
      No Data Sources Connected
    </div>
    <div
      class="no-results-description"
    >
      Add a data source to get started.
      <a
        class="d-block mb-3"
        href="https://learn.liferay.com/w/dxp/personalization/analytics-cloud/workspace-data/managing-data-sources"
        rel="noreferrer noopener"
        target="_blank"
      >
        Access our documentation to learn more.
        <span
          class="sr-only"
        >
          (Opens a new window)
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`DataSourceList should render with an empty state 1`] = `
<div
  class="no-results-root flex-grow-1"
>
  <div
    class="no-results-content"
  >
    <div
      class="no-results-icon"
    >
      <svg
        class="lexicon-icon lexicon-icon-ac_no_results_found icon-root icon-size-xxxl"
        role="presentation"
      >
        <use
          href="#ac_no_results_found"
        />
      </svg>
    </div>
    <div
      class="h4 no-results-title"
    >
      There are no results found.
    </div>
    <div
      class="no-results-description"
    >
      Please try a different search term.
    </div>
  </div>
</div>
`;
